fix: redesigned understanding sleep article completed
Signed-off-by: oscitate <ephie8654@outlook.com>

--- a/articleAssets/selfcare/understandingsleep/page1.html
+++ b/articleAssets/selfcare/understandingsleep/page1.html
@@ -4,16 +4,38 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-  <h2>TL:DR</h2>
-  <p style="font-style: italic;">Date of post: 2 Sep 24</p>
+  <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
+    <img style="width: 50%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/selfcare/selfcare-logo.png">
 
-	<p>Good physical and mental health comes with having quality sleep which involves getting sufficient uninterrupted sleep on a regular basis. Without healthy sleep, it can be challenging to manage everyday tasks such as paying attention in school, work or meeting. You may also be more likely to get sick or forgetful. Understanding how sleep works, which is a very complex process, will help you figure out how to improve your sleep quality.</p>
+    <p>
+      Good physical and mental health comes with having quality sleep which involves getting sufficient uninterrupted sleep on a regular basis. Without healthy sleep, it can be challenging to manage everyday tasks such as paying attention in school, work or meeting. You may also be more likely to get sick or forgetful. Understanding how sleep works, which is a very complex process, will help you figure out how to improve your sleep quality.
+    </p>
+  </div>
 </body>
 </html>
