--- a/articleAssets/selfcare/understandingsleep/page12.html
+++ b/articleAssets/selfcare/understandingsleep/page12.html
@@ -28,22 +28,23 @@
 	h1 {
 		font-size: 20px;
 	}
+
+	li {
+		margin-left: 
+	}
 </style>
 <body>
   <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
-		<img style="width: 100%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfcare/understandingsleep/page4-image1.png">
-
-		<p>
-			<b>How do our body regulate sleep?</b>
-			<br>
-			Our body depends on the two factors below to drive our sleep process naturally.
-		</p>
-
-		<p>
-			<b>Sleep-wake homeostasis</b>
-			<br>
-			Sounds cheem? Actually, it is what we instinctively know from experience i.e. the longer we are awake and active, the greater we feel a need to sleep.  It drives us to want to sleep longer or more deeply after a period of insufficient sleep.
-		</p>
+		<h1><b>YOU MAY BE INTERESTED IN THESE TOO:</b></h1>
+		<a href="internal:///thisarticle?category=understandingyourself&title=Identify & Tame Your Emotions&id=4" style="color: #765000">Understanding Yourself – Identify & Tame Your Emotion</a>
+		<br>
+		<a href="internal://thisarticle?category=selfcare&title=Sleep Quality Checklist&id=2" style="color: #765000">Understanding Yourself – Sleep Quality Checklist</a>
+		<br>
+		<a href="internal:///meditation/meditation/" style="color: #765000">
+			<img style="width: 100%; object-fit: contain;" src="../../assets/articleAssets/meditation.png">
+		</a>
+		<br>
+		<a href="internal://" style="color: #765000">Activity – Sleep Diary</a>
 	</div>
 </body>
 </html>
