--- a/articleAssets/selfcare/understandingsleep/page9.html
+++ b/articleAssets/selfcare/understandingsleep/page9.html
@@ -4,28 +4,56 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<p>
-		Adhering to good sleep hygiene is one way to achieve healthy sleep. Some sleep hygiene tips are:
-		<ul style="list-style-type: '✓ ' ;">
-			<li>Limit naps to 20mins</li>
-			<li>Engage in relaxing activities about 1hr prior to your bedtime to wind down</li>
-			<li>Ensure that your bedroom is cool, dark, quiet and peaceful</li>
-			<li>Avoid screen time as the light can stimulate your brain activities</li>
-			<li>Avoid alcohol, nicotine and caffeine prior to bedtime</li>
-			<li>Have at least 30mins of sunlight in the morning</li>
-		</ul>	
+  <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
+		<h1 style="text-align: center;"><b>HOW TO APPLY IT?</b></h1>
 
-		<span style="color: green; font-weight: bold" >Third</span>, stick to the set sleep schedule continuously so your body can be conditioned to the right cues for sleep. It is normal if you find it hard to engage with sleep hygiene practices initially, as your body takes time to adjust, so keep it going.
-		<br><br>
-		Nonetheless if you have tried the above for a period and still find it ineffective, it is time to consult a doctor, especially if you suspect that it could be linked to an underlying medical/mental health condition. 
-	</p>
+		<p>What can we do if our sleep is constantly disrupted?</p>
 
+		<p>
+			<span>
+				<a style="color: green; font-weight: bold" >First</a>, it is important to identify the unhelpful factors that are disrupting your sleep such as:
+			</span>
+
+			<ul>
+				<li>Your lifestyle e.g., diet/ caffeine intake/ activity level</li>
+				<li>Stress level</li>
+				<li>Exposure to light e.g., from electronic devices</li>
+				<li>Sleep disorder e.g., sleep apnea or restless legs syndrome</li>
+				<li>Noise or disturbances within your sleep environment</li>
+			</ul>
+			<br>
+			Keeping a sleep diary is one way to track the factors that help/hinder sleep.
+			<br><br>
+			<span>
+				<a style="color: green; font-weight: bold; white-space: nowrap;" >Second</a>, make relevant changes so you can commit to a consistent sleep schedule to allow your body to cycle through the stages of sleep.
+			</span>
+		</p>
+	</div>
 </body>
 </html>
