--- a/articleAssets/selfcare/understandingsleep/page10.html
+++ b/articleAssets/selfcare/understandingsleep/page10.html
@@ -4,20 +4,74 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
+
+	li {
+		margin-left: 
+	}
 </style>
 <body>
-	<h2>YOU MAY BE INTERESTED IN THESE TOO:</h2>
-	<a href="internal:///thisarticle?category=understandingyourself&title=Identify & Tame Your Emotions&id=4" style="color: #765000">Understanding Yourself – Identify & Tame Your Emotion</a>
-	<br><br>
-	<a href="internal://thisarticle?category=selfcare&title=Sleep Quality Checklist&id=2" style="color: #765000">Understanding Yourself – Sleep Quality Checklist</a>
-	<br><br>
-	<a href="internal:///meditation/meditation" style="color: #765000">Activity – Mindful Pause (Breath-Work)</a>
-	<br><br>
-	<a href="internal://" style="color: #765000">Activity – Sleep Diary</a>
+  <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
+		<h1 style="text-align: center;"><b>Adhering to good sleep hygiene is one way to achieve healthy sleep. Some sleep hygiene tips are:</b></h1>
+
+		<div style="display: flex; flex-direction: column; margin-left: 5%; gap: 16px">
+			<div style="display: flex; flex-direction: row; gap: 16px;">
+				<img style="width: 5%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfcare/understandingsleep/page10-image1.png">
+				Limit naps to 20mins
+			</div>
+
+			<div style="display: flex; flex-direction: row; gap: 16px;">
+				<img style="width: 5%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfcare/understandingsleep/page10-image1.png">
+				Engage in relaxing activities about 1hr prior to your bedtime to wind down
+			</div>
+
+			<div style="display: flex; flex-direction: row; gap: 16px;">
+				<img style="width: 5%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfcare/understandingsleep/page10-image1.png">
+				Ensure that your bedroom is cool, dark, quiet and peaceful
+			</div>
+			
+			<div style="display: flex; flex-direction: row; gap: 16px;">
+				<img style="width: 5%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfcare/understandingsleep/page10-image1.png">
+				Avoid screen time as the light can stimulate your brain activities
+			</div>
+
+			<div style="display: flex; flex-direction: row; gap: 16px;">
+				<img style="width: 5%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfcare/understandingsleep/page10-image1.png">
+				Avoid alcohol, nicotine and caffeine prior to bedtime
+			</div>
+
+			<div style="display: flex; flex-direction: row; gap: 16px;">
+				<img style="width: 5%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfcare/understandingsleep/page10-image1.png">
+				Have at least 30mins of sunlight in the morning
+			</div>
+		</div>
+
+			<span style="color: green; font-weight: bold" >Third</span>, stick to the set sleep schedule continuously so your body can be conditioned to the right cues for sleep. It is normal if you find it hard to engage with sleep hygiene practices initially, as your body takes time to adjust, so keep it going.
+			<br><br>
+			Nonetheless if you have tried the above for a period and still find it ineffective, it is time to consult a doctor, especially if you suspect that it could be linked to an underlying medical/mental health condition. 
+	</div>
 </body>
 </html>
