--- a/articleAssets/selfcare/understandingsleep/page11.html
+++ b/articleAssets/selfcare/understandingsleep/page11.html
@@ -28,20 +28,20 @@
 	h1 {
 		font-size: 20px;
 	}
+
+	li {
+		margin-left: 
+	}
 </style>
 <body>
   <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
-		<img style="width: 80%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfcare/understandingsleep/page5-image1.png">
-
 		<p>
-			<b>Circadian Rhythm (“Body Clock”)</b>
-			<br>
-			Based typically on a 24 hours period, it is key enabler to how we function on a daily basis, including sleep. Light exposure is the known biggest influence on the circadian rhythms, for which we are wakeful in the day but sleepy in the night.
+			<a style="color: green; font-weight: bold" >Third</a>, stick to the set sleep schedule continuously so your body can be conditioned to the right cues for sleep. It is normal if you find it hard to engage with sleep hygiene practices initially, as your body takes time to adjust, so keep it going.
 			<br><br>
-			The exact amount of necessary sleep can vary across person, depending on your life phase. On average, an adult should get at least 7 hours of sleep each night to avoid incurring sleep debt. As important as sleep quantity is, sleep quality (sleeping without interruptions) is also key to achieving healthy and satisfying sleep!
+			Nonetheless if you have tried the above for a period and still find it ineffective, it is time to consult a doctor, especially if you suspect that it could be linked to an underlying medical/mental health condition.
+			<br><br>
+			<img style="width: 100%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfcare/understandingsleep/page11-image1.png">
 		</p>
 	</div>
-
-  
 </body>
 </html>
