--- a/articleAssets/selfcare/understandingsleep/page7.html
+++ b/articleAssets/selfcare/understandingsleep/page7.html
@@ -4,27 +4,46 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<p>
-		<b>Stage 1</b> [1 — 5mins] & <b>Stage 2</b> [10 — 60mins]
-		<br><br>
-		The moment we dozed off, our body will rapidly try to transit to Stage 2 to further slow down our brain and body activity. As it is the early stages, it is much easier to be awoken by any disturbance too.
-	</p>
-	<p>
-		<b>Stage 3</b> [ 20 — 40mins]
-		<br><br>
-		This is the deepest part of non-REM sleep where our whole body shows significantly slower activity that is different from or waking mind. Such deep sleep is important for our body to recuperate so we can achieve effective thinking and memory.
-	</p>
-	<p>
-		<b>Stage 4</b> [ 10 — 60mins]
-		<br><br>
-		As the only REM stage of sleep, this is when intense dreaming takes place. At this time, our brain activity increases markedly, while most of our body experience temporary paralysis (i.e., not being able to move), except for our eyes and breathing muscles. It is normal for a greater percentage of our sleep duration to be in REM sleep, especially in the later half of the sleep cycles.
-	</p>
+  <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
+		<img style="width: 100%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfcare/understandingsleep/page6-image1.png">
+
+		<p>
+			<b>Stage 1</b> [1 - 5mins] & <b>Stage 2</b> [10 - 60mins]
+			<br>
+			The moment we dozed off, our body will rapidly try to transit to Stage 2 to further slow down our brain and body activity. As it is the early stages, it is much easier to be awoken by any disturbance too.
+
+			<br><br>
+
+			<b>Stage 3</b> [20 - 40mins]
+			<br>
+			This is the deepest part of non-REM sleep where our whole body shows significantly slower activity that is different from or waking mind. Such deep sleep is important for our body to recuperate so we can achieve effective thinking and memory.
+		</p>
+	</div>
 </body>
 </html>
