fix: redesigned distress signs and attachment style articles
Signed-off-by: oscitate <ephie8654@outlook.com>

--- a/articleAssets/aboutself/attachmentstyle/page1.html
+++ b/articleAssets/aboutself/attachmentstyle/page1.html
@@ -4,18 +4,44 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-  <h2>TL:DR</h2>
-  <p style="font-style: italic;">Date of post: 9 Sep 24</p>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+    <p style="text-align: center;">
+      <b>Discover your Attachment Style</b>
+      <br>
+      Unlock better relationships and embark on personal growth
+    </p>
 
-	<p>Attachment is a special emotional relationship that involves an exchange of comfort, care, and pleasure. Extensive research has been done on attachment, describing it as a “lasting psychological connectedness between human beings.” Attachment pattern in our early life can affect how we build relationships or behave in adulthood. </p>
+    <img style="width: 80%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutself/aboutself.png">
 
-	 <p>Learning how we have formed our attachment style helps us identify the challenges we faced in our relationships, in turn aid us to reinvent ourselves and create better bonds with our loved ones.</p>
+    <p>Attachment is a special emotional relationship that involves an exchange of comfort, care, and pleasure. Extensive research has been done on attachment, describing it as a “lasting psychological connectedness between human beings.” Attachment pattern in our early life can affect how we build relationships or behave in adulthood.</p>
+
+    <p>Learning how we have formed our attachment style helps us identify the challenges we faced in our relationships, in turn aid us to reinvent ourselves and create better bonds with our loved ones.</p>
+  </div>
 </body>
 </html>
