--- a/articleAssets/aboutself/attachmentstyle/page11.html
+++ b/articleAssets/aboutself/attachmentstyle/page11.html
@@ -4,25 +4,40 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<h2>WHAT'S NEXT</h2>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
 
-	<p>It is important for us to understand our attachment styles, not to confine ourselves to categories, but to increase our awareness of the trade-offs, unhelpful patterns, and potential negative outcomes associated with certain attachment styles. Repeated exposure to insecure patterns can reinforce insecure expectations, leading to insecure responses. So, let's work on identifying these patterns and reframing them into more positive ones to enhance our relationships with our loved ones!</p>
+		<p>Now, you can have a sensing of your attachment style.</p>
+		<p>Our attachment styles are shaped by our experiences. Although we generally have a dominant attachment style, we can also display different attachment styles in various areas of our lives depending on our experiences.</p>
+		<p>Now, you can use your scores from the "Experience in Close Relationships Questionnaire" as a guide, or simply reflect on the contexts that typically trigger a more insecure attachment for you.</p>
 
-	<div style="display: flex; gap: 20px">
-		<img src="../../assets/articleAssets/aboutself/attachmentstyle/page11-image1.png">
-		<div style="display: flex; align-items: center;">
-			<p>
-				<b>Try this - ECR-RS Questionnaire</b>
-				<br><br>
-				<a href="https://www.yourpersonality.net/relstructures/">https://www.yourpersonality.net/relstructures/</a>
-			</p>
+		<div style="display: flex; flex-direction: column;">
+			<img style="width: 30%; object-fit: contain; align-self: flex-end" src="../../assets/articleAssets/aboutself/attachmentstyle/page11-image1.png">
 		</div>
 	</div>
 </body>
