--- a/articleAssets/aboutself/attachmentstyle/page4.html
+++ b/articleAssets/aboutself/attachmentstyle/page4.html
@@ -4,16 +4,36 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<div style="height: 100px"></div>
-	<div style="display: flex; justify-content: center; align-items: center; text-align: center;">
-		<p style="width: 70%">The presence or absence of each determine our attachment styles. In addition, he proposed three factors that can influence our attachment styles as well.</p>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<p>The safe space provided by the attachment figure allows us to explore our environment and uncertainties with more confidence <b>(secure base)</b> but can cause us anxiety if the attachment figure is absent <b>(separation distress)</b>.</p>
+
+		<p>The presence or absence of each element determines our attachment styles. In addition, he proposed three factors that can influence our attachment styles as well.</p>
 	</div>
 </body>
 </html>
