--- a/articleAssets/aboutself/attachmentstyle/page9.html
+++ b/articleAssets/aboutself/attachmentstyle/page9.html
@@ -4,51 +4,55 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<h2>Four Types of Attachment</h2>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<img style="width: 115%; object-fit: contain; align-self: center" src="../../assets/articleAssets/aboutself/attachmentstyle/page9-image1.png">
 
-	<div style="display: flex">
-		<div style="display: flex; flex: 1; flex-direction: column; gap: 20%">
-			<div>
-				<p>
-					<b>Secure attachment</b>
-					<br>
-					<p>Tend to be open, honest in relationships and view others as equal</p>
-				</p>
-			</div>
-			<div>
-				<p>
-					<b>Avoidant attachment</b>
-					<br>
-					<p>Tend to be emotionally distant and avoid true intimacy</p>
-				</p>
-			</div>
-		</div>
-		<div style="display: flex; flex: 1; align-items: center; justify-content: center;">
-			<img width="90%" src="../../assets/articleAssets/aboutself/attachmentstyle/page9-image1.png">
-		</div>
-		<div style="display: flex; flex: 1; flex-direction: column; gap: 20%">
-			<div>
-				<p>
-					<b>Preoccupied attachment</b>
-					<br>
-					<p>Tend to idealise their relationship and over-analyse situation, driving insecurities.</p>
-				</p>
-			</div>
-			<div>
-				<p>
-					<b>Disorganised attachment</b>
-					<br>
-					<p>Tend to have internal conflict between being too close or too distant to others</p>
-				</p>
-			</div>
-		</div>
+		<p>
+			<b>Secure attachment - </b>
+			Tend to be open, honest in relationships and view others as equal
+		</p>
+
+		<p>
+			<b>Avoidant attachment - </b>
+			Tend to be emotionally distant and avoid true intimacy
+		</p>
+
+		<p>
+			<b>Preoccupied attachment - </b>
+			Tend to idealise their relationship and over-analyse situation, driving insecurities.
+		</p>
+
+		<p>
+			<b>Disorganised attachment - </b>
+			Tend to have internal conflict between being too close or too distant to others
+		</p>
+
 	</div>
 </body>
 </html>
