--- a/articleAssets/aboutself/distresssigns/page3.html
+++ b/articleAssets/aboutself/distresssigns/page3.html
@@ -4,35 +4,40 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<div style="display: flex; flex-direction: column;">
-		<div style="display: flex; flex: 1; align-items: center; text-align: center;">
-			<p style="flex: 1"><b>Distress</b></p>
-			<img style="flex: 1" src="../../assets/articleAssets/aboutself/distresssigns/page3-image1.png">
-			<p style="flex: 1"><b>Eustress</b></p>
-		</div>
-		<div style="display: flex; gap: 20px">
-			<div style="flex: 1; padding: 10px; background-color: lightcoral;">
-				<p>Negative stress response characterized by <b>negative emotions and physiological reactions</b></p>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">	
+		<img style="width: 100%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutself/distresssigns/page3-image1.png">
 
-				<p>Arises when one is overwhelmed by demands, losses, or perceived threats</p>
+		<p>Negative stress response characterized by <b>negative emotions and physiological reactions</b></p>
 
-				<p>Harmful as it can lead to <b>serious health issues</b> like high blood pressure, heart disease, obesity, diabetes and even suicide</p>
-			</div>
-			<div style="flex: 1; padding: 10px; background-color: #cff1c2;">
-				<p>Positive stress response that involves <b>optimal levels of stimulation</b></p>
+		<p>Arises when one is overwhelmed by demands, losses, or perceived threats</p>
 
-				<p>Occurs in response to challenging but manageable and rewarding tasks e.g., healthy competition</p>
-
-				<p>Beneficial as it generates a <b>sense of accomplishment</b>, facilitates <b>personal growth</b> and development, and supports <b>high performance</b></p>
-			</div>
-		</div>
+		<p>Harmful as it can lead to <b>serious health issues</b> like high blood pressure, heart disease, obesity, diabetes and even suicide</p>
 	</div>
 </body>
 </html>
