--- a/articleAssets/aboutself/distresssigns/page9.html
+++ b/articleAssets/aboutself/distresssigns/page9.html
@@ -4,27 +4,38 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<div style="display: flex">
-		<img width="40%" src="../../assets/articleAssets/aboutself/distresssigns/page9-image1.png">
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1 style="text-align: center;"><b>Step 3:</b></h1>
+		
+		<p style="text-align: center; margin-top: -16px;">Sometimes it is not within our control to do anything at the moment. When the distressing event cannot be resolved yet, let’s be kinder to ourselves and take a step back. Focus on self-care to build up a healthy body and mind first.</p>
 
-		<div>
-			<p>Still unsure what is your stress level?</p>
-
-			<p><b>Try this Perceived Stress Scale survey to get a sensing (PSS-14):</b></p>
-			
-			<a href="https://www.psytoolkit.org/cgi-bin/3.4.4/survey?s=hWZu8" style="color: #765000;">https://www.psytoolkit.org/cgi-bin/3.4.4/survey?s=hWZu8</a>
-
-			<p>However, do note that this is not a diagnostic tool. It serves as a guide to highlight if you are having high perceived stress (> 27).</p>
-
-			<p>Reach out to a professional if you are lost about what to do!</p>
-		</div>
+		<img style="width: 90%; object-fit: contain; align-self: center" src="../../assets/articleAssets/aboutself/distresssigns/page8-image1.png">
 	</div>
 </body>
 </html>
