--- a/articleAssets/aboutself/attachmentstyle/page10.html
+++ b/articleAssets/aboutself/attachmentstyle/page10.html
@@ -4,15 +4,44 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<div style="display: flex; align-items: center; justify-content: center;">
-		<img style="align-self: center" width="55%" src="../../assets/articleAssets/aboutself/attachmentstyle/page10-image1.png">
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1 style="text-align: center;"><b>WHAT'S NEXT</b></h1>
+
+		<p>It is important for us to understand our attachment styles, not to confine ourselves to categories, but to increase our awareness of the trade-offs, unhelpful patterns, and potential negative outcomes associated with certain attachment styles. Repeated exposure to insecure patterns can reinforce insecure expectations, leading to insecure responses. So, let's work on identifying these patterns and reframing them into more positive ones to enhance our relationships with our loved ones!</p>
+
+		<img style="width: 30%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutself/attachmentstyle/page10-image1.png">
+
+		<p style="text-align: center;">
+			<b>Try this - </b>
+			<br>
+			<a style="color: #765000" href="https://www.yourpersonality.net/relstructures/">ECR-RS Questionnaire</a>
+		</p>
 	</div>
 </body>
 </html>
