--- a/articleAssets/aboutself/attachmentstyle/page12.html
+++ b/articleAssets/aboutself/attachmentstyle/page12.html
@@ -4,20 +4,38 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<div style="display: flex">
-		<div style="display: flex; flex: 3; flex-direction: column;">
-			<p>Now, you can have a sensing of your attachment style.</p>
-			<p>Our attachment styles are shaped by our experiences. Although we generally have a dominant attachment style, we can also display different attachment styles in various areas of our lives depending on our experiences.</p>
-			<p>Now, you can use your scores from the "Experience in Close Relationships Questionnaire" as a guide, or simply reflect on the contexts that typically trigger a more insecure attachment for you.</p>
-		</div>
-		<img src="../../assets/articleAssets/aboutself/attachmentstyle/page12-image1.png">
-	</div>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+    <h1><b>YOU MAY BE INTERESTED IN THESE TOO:<b></h1>
+
+    <a href="internal:///thisarticle?category=aboutself&title=Know Your Personality Type&id=3" style="color: #765000">Understanding Yourself – Know Your Personality Type</a>
+    <br><br>
+    <a href="internal:///thisarticle?category=aboutself&title=Introvert or Extrovert&id=" style="color: #765000">Understanding Yourself – Introvert or Extrovert</a>
+  </div>
 </body>
 </html>
