--- a/articleAssets/aboutself/attachmentstyle/page3.html
+++ b/articleAssets/aboutself/attachmentstyle/page3.html
@@ -4,20 +4,39 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<div style="display: flex; gap: 20px">
-		<div style="flex: 6">
-			<p>At that time, many psychoanalytic theorists believed these behaviors were immature defense mechanisms meant to suppress emotional pain. However, Bowlby believed that building a strong bond with specific person is an essential part of survival.</p>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
 
-			<p>With the person we are attached to, we desire to be near them <b>(proximity maintenance)</b> and be able to return to them for comfort and safety when faced with challenge or threat <b>(safe haven)</b>. The safe space provided by the attachment figure allows us to explore our environment and uncertainties with more confidence <b>(secure base)</b> but can cause us anxiety if the attachment figure is absent <b>(separation distress)</b>.</p>
-		</div>
-		<img style="flex: 1" width="20%" src="../../assets/articleAssets/aboutself/attachmentstyle/page3-image1.png">
+		<p>At that time, many psychoanalytic theorists believed these behaviors were immature defense mechanisms meant to suppress emotional pain. However, Bowlby believed that building a strong bond with specific person is an essential part of survival.</p>
+
+		<p>With the person we are attached to, we desire to be near them <b>(proximity maintenance)</b> and be able to return to them for comfort and safety when faced with challenge or threat <b>(safe haven)</b>. The safe space provided by the attachment figure allows us to explore our environment and uncertainties with more confidence <b>(secure base)</b> but can cause us anxiety if the attachment figure is absent <b>(separation distress)</b>.</p>
+
+		<img style="width: 60%; object-fit: contain; align-self: center" src="../../assets/articleAssets/aboutself/attachmentstyle/page3-image1.png">
 	</div>
 </body>
 </html>
