--- a/articleAssets/aboutself/attachmentstyle/page6.html
+++ b/articleAssets/aboutself/attachmentstyle/page6.html
@@ -4,24 +4,38 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<div style="display: flex;">
-		<div style="flex: 1"></div>
-		<div style="display: flex; flex: 2; flex-direction: column; align-items: center;">
-			<img width="70%" src="../../assets/articleAssets/aboutself/attachmentstyle/page6-image1.png">
-			<p style="text-align: center;">
-				<b>TWO</b>
-				<br>
-				Early experiences during critical development period, e.g., infancy, childhood and adolescence, are critical to build our confidence
-			</p>
-		</div>
-		<div style="flex: 1"></div>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1 style="text-align: center;"><b>TWO</b></h1>
+		<p style="text-align: center; margin-top: -16px">Early experiences during critical development period, e.g., infancy, childhood and adolescence, are critical to build our confidence</p>
+
+		<br><br><br>
+		<img style="width: 120%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutself/attachmentstyle/page6-image1.png">
 	</div>
 </body>
 </html>
