--- a/articleAssets/aboutself/attachmentstyle/page8.html
+++ b/articleAssets/aboutself/attachmentstyle/page8.html
@@ -4,17 +4,38 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<div style="height: 100px"></div>
-	<div style="display: flex; justify-content: center; align-items: center; text-align: center; flex-direction: column">
-		<p style="width: 70%">There are 4 types of attachment styles, 3 of which are insecure attachment styles also known as <b>Preoccupied Attachment</b>, <b>Avoidant Attachment</b> and <b>Disorganised Attachment</b>.</p>
-		<p style="width: 70%">These attachment styles are formed based on the differing perspectives you hold about yourself and others.</p>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<p>There are 4 types of attachment styles, 3 of which are insecure attachment styles also known as <b>Preoccupied Attachment, Avoidant Attachment</b> and <b>Disorganised Attachment.</b></p>
+			
+		<p>These attachment styles are formed based on the differing perspectives you hold about yourself and others.</p>
+
+		<img style="width: 90%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutself/attachmentstyle/page8-image1.png">
 	</div>
 </body>
 </html>
