--- a/articleAssets/aboutself/distresssigns/page1.html
+++ b/articleAssets/aboutself/distresssigns/page1.html
@@ -4,18 +4,41 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-  <h2>TL:DR</h2>
-  <p style="font-style: italic;">Date of post: 10 Sep 24</p>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+    <h1 style="text-align: center;"><b>Do you know your stress?</b></h1>
+    <p style="text-align: center; margin-top: -16px">Identify the Distress</p>
 
-	<p>Stress is a normal response that anyone can experience when life demands exceed their ability to cope effectively. Sometimes stress can be from obvious source, other times from small daily things like work, school, family or friendship issues.</p>
+    <img style="width: 80%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutself/aboutself.png">
 
-	<p>Prolonged inability to resolve stress can lead to distress. It can show up in many ways, from general signs that someone seems different to more specific changes in how they talk, think, feel, act, or behave. Being aware of the distress signs is first step to improve your coping!</p>
+    <p>Stress is a normal response that anyone can experience when life demands exceed their ability to cope effectively. Sometimes stress can be from obvious source, other times from small daily things like work, school, family or friendship issues.</p>
+
+    <p>Prolonged inability to resolve stress can lead to distress. It can show up in many ways, from general signs that someone seems different to more specific changes in how they talk, think, feel, act, or behave. Being aware of the distress signs is first step to improve your coping!</p>
+  </div>
 </body>
 </html>
