--- a/articleAssets/aboutself/distresssigns/page10.html
+++ b/articleAssets/aboutself/distresssigns/page10.html
@@ -4,22 +4,43 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-  <h2>YOU MAY BE INTERESTED IN THESE TOO:</h2>
-  <a href="internal:///thisarticle?category=aboutself&title=Introvert or Extrovert&id=" style="color: #765000">Understanding Yourself – Introvert or Extrovert</a>
-  <br><br>
-  <a href="internal:///thisarticle?category=aboutself&title=What is Attachment Style&id=5" style="color: #765000">Understanding Yourself – Attachment Styles</a>
-	<br><br>
-	<a href="internal:///thisarticle?category=aboutself&title=Eustress&id=7" style="color: #765000">Understanding Yourself – Eustress</a>
-	<br><br>
-	<a href="internal:///thisarticle?category=selfhelp&title=ABC Model&id=" style="color: #765000">About Self-Care – ABC Model</a>
-	<br><br>
-	<a href="internal:///meditation/meditation" style="color: #765000">Activity – Mindful Pause</a>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<p style="text-align: center;">Still unsure what is your stress level?</p>
+
+		<p style="text-align: center;">Try this Perceived Stress Scale survey to get a sensing (PSS-14):</p>
+		<a style="text-align: center; margin-top: -16px; color: #765000;" href="https://www.psytoolkit.org/cgi-bin/3.4.4/survey?s=hWZu8">https://www.psytoolkit.org/cgi-bin/3.4.4/survey?s=hWZu8</a>
+
+		<p style="text-align: center;">However, do note that this is not a diagnostic tool. It serves as a guide to highlight if you are having high perceived stress (> 27).</p>
+
+		<p style="text-align: center;">Reach out to a professional if you are lost about what to do!</p>
+
+		<img style="width: 80%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutself/distresssigns/page9-image1.png">
+	</div>
 </body>
 </html>
