--- a/articleAssets/aboutself/distresssigns/page4.html
+++ b/articleAssets/aboutself/distresssigns/page4.html
@@ -4,17 +4,40 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<div style="display: flex; align-items: center;">
-		<div style="flex: 2"></div>
-  	<img style="flex: 1" width="30%" src="../../assets/articleAssets/aboutself/distresssigns/page4-image1.png">
-		<div style="flex: 2"></div>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">	
+		<img style="width: 70%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutself/distresssigns/page4-image1.png">
+
+		<p>Positive stress response that involves <b>optimal levels of stimulation</b></p>
+
+		<p>Occurs in response to challenging but manageable and rewarding tasks e.g., healthy competition</p>
+
+		<p>Beneficial as it generates a <b>sense of accomplishment</b>, facilitates <b>personal growth</b> and development, and supports <b>high performance</b></p>
 	</div>
 </body>
 </html>
