--- a/articleAssets/aboutself/distresssigns/page6.html
+++ b/articleAssets/aboutself/distresssigns/page6.html
@@ -4,20 +4,44 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<h2>Step 1:</h2>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<div style="flex: 5">
+			<h1 style="text-align: center;"><b>WHAT'S NEXT</b></h1>
 			
-	<p>Identify the common signs of distress. It may be easier to spot the change in thoughts, emotions and behaviour when we are familiar with the person’s usual self.</p>
-	<div style="display: flex">
-		<div style="flex: 2"></div>
-		<img style="flex: 1" width="45%" src="../../assets/articleAssets/aboutself/distresssigns/page6-image1.png">
-		<div style="flex: 2"></div>
+			<p>Everyone responds to stress in their own way, and everyone’s body signals different red flags. Some people may not experience physical or emotional warning signs until hours or days after a stressful event.</p>
+
+			<p>Notably, distress is an emotional state that is often described as a feeling of losing control, being overwhelmed, and struggling to cope. It can be <b>temporary and reversible</b>, which mean we can get out of it if proper steps are taken!</p>
+
+			<p>Resultantly, we can help our body recover and prevent the high costs and complications of chronic health issues.</p>
+		</div>
+
+		<img style="width: 50%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutself/distresssigns/page6-image1.png">
 	</div>
 </body>
 </html>
