--- a/articleAssets/aboutself/distresssigns/page7.html
+++ b/articleAssets/aboutself/distresssigns/page7.html
@@ -4,26 +4,38 @@
 	<meta charset="utf-8">
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <style>
   html * {
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "Mulish", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+	b {
+		font-weight: 700;
+	}
+
+	p + ul {
+		margin-top: -16px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
 </style>
 <body>
-	<h2>Step 2:</h2>
-			
-	<p>Use the following to help you zoom into the specific stress and identify possible action to reduce it. Keep a journal to track recurring patterns or express out the negativity.</p>
+  <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1 style="text-align: center;"><b>Step 1:</b></h1>
+		<p style="text-align: center; margin-top: -16px;">Identify the common signs of distress. It may be easier to spot the change in thoughts, emotions and behaviour when we are familiar with the person’s usual self.</p>
 
-	<ul>
-		<li>List the challenges that causes distress</li>
-		<li>Select one example from the list above</li>
-		<li>How did this distress impact you physically, emotionally and/or cognitively</li>
-		<li>What is stopping you from doing it in a more helpful manner</li>
-		<li>What would happen if it cannot be resolved</li>
-		<li>How can the stress be broken down into manageable parts</li>
-		<li>What can I do now that is within my control to reduce the stress</li>
-		<li>What are things that I am grateful for despite the stress</li>
-	</ul>
+		<br><br>
+		<img style="width: 110%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutself/distresssigns/page7-image1.png">
+	</div>
 </body>
 </html>
